

0. What is new in this release?

Changes since version Release 2.0 "Red Dragon"

* PauseShutdown now became global setting. When service is stopped, it doesn't make sence to wait VM0 to shutdown, then VM1, then VM2, ..., etc. Now all the VMs will start shutting down at once, and all are expected to finish within time specified as PauseShutdown.

Changes since version rel20100817-win7

* Removed all the batch files and call VBoxManage.exe directly at VBoxVmService.
* Added VmServiceControl.exe to do all the controlling job and VBoxVmService.exe now become a pure service program.
* Reworked some of the documentation.
* Dropped some parameters from the ini-file, please review Howto.txt for a list of currently valid options

Changes since version rel20091210-win7

* VBOX_USER_HOME will now be set up during the installation process.
* Minor improvements on the overall code.
* Simplified the overall installation procedure.
* Reworked some of the documentation.


Changes since version rel20091103-win7

* Support for the VBOX_USER_HOME environment variable has been added.
* Hardlinking was dropped from install procedure.
* Documentation was reworked.


Changes since version rel20081010

* Windows 7 support has been added. Thanks to user FB2000 for his patches and his extensive research regarding that topic!


Changes since version rel20081009

* There have been errors while putting together the package. This Release was recalled!


Changes since version rel20080728

* Improved the event-logging to VBoxVmService.log. It will now capture the response messages from the VirtualBox components.
* A PARAMETER NAME WITHIN THE FILE VBoxVmService.ini HAS BEEN CHANGED: PLEASE RENAME THE PARAMETER FROM "PathToVBoxVRDP" TO "PathToVBoxHeadless" IF YOU ARE UPGRADING FROM AN EARLIER VERSION AND ARE PLANNING TO USE YOUR OLD INI-FILE!


Changes since version rel20080422
