@@ -110,6 +110,12 @@ The command:
 
 can be used to check the output, generated by the steps of a shutdown process targeting [Vm0]. Afterwards, there should be no running "VBoxHeadless.exe"-process. Additionally, you should see a "VBoxSVC.exe"-process terminating shortly after a successful shutdown of "VBoxHeadless.exe".
 
+And the command:
+
+    VmServiceControl.exe -st 0   [ENTER]
+
+can be used to check the statue of the VM targeting [Vm0].
+
 IMPORTANT: If you want to control your VMs with VRDP, assign a dedicated port for each individual VM. Do NOT use the standard port 3389 (e.g. use: 3010 for Vm0, 3020 for Vm1, etc.)!
 
 Read the log-file! 
@@ -119,7 +125,7 @@ VBOX_USER_HOME. Check the permission on this folder and change if necessary.
 
 If you made a mistake on VBOX_USER_HOME, however, fixing it at VBoxVmService.ini is not enough. Because the value was get written into environment variable during installation. You need to open Control Panel -> System -> Advanced system settings -> Advanced -> Environment Variables, and fix it there. Please also make sure VBOX_USER_HOME appears only at system variables, not user variables.
 
-Some reported that a system reboot is required after installation to get VBoxVmService work correctly. So give it a try if you haven't. 
+After installation and everytime when you changed VBOX_USER_HOME later, a system reboot might be required to get VBoxVmService work correctly. So give it a try if you haven't. 
 
 The VBoxVmService Dev Team might be on VirtualBox's official forums now and then, so feel free to contact us there.
 
